2008-06-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c: Fixed bug in Tcl_GetTranslatedPath() when
	operating on the "Special path" variant of the "path" Tcl_ObjType
	intrep.  A full normalization was getting done, in particular, coercing
	relative paths to absolute, contrary to what the function of
	producing the "translated path" is supposed to do.  [Bug 1972879].

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Update for 8.5.3 release.

	* generic/tclInterp.c:	Fixed completely boneheaded mistake that
	* tests/interp.test:	[interp bgerror $slave] and [$slave bgerror]
	would always act like [interp bgerror {}].  [Bug 1999035].

	* tests/chanio.test:	Corrected flawed tests revealed by a -debug 1
	* tests/event.test:	-singleproc 1 test suite run.
	* tests/io.test:

2008-06-19  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.3 release.

2008-06-17  Andreas Kupries  <andreask@activestate.com>

	* generic/tclClock.c (ClockConvertlocaltoutcObjCmd): Removed left
	over debug output.

2008-06-17  Andreas Kupries  <andreask@activestate.com>

	* doc/tm.n: Followup to changelog entry 2008-03-18 regarding
	::tcl::tm::Defaults. Updated the documentation to not only mention
	the new (underscored) form of environment variable names, but make
	it the encouraged form as well. See [Bug 1914604].
	
2006-06-17  Kevin Kenny  <kennykb@acm.org>

	* generic/tclClock.c (ConvertLocalToUTC):
	* tests/clock.test (clock-63.1): Fixed a bug where the
	internal ConvertLocalToUTC command segfaulted if passed a
	dictionary without the 'localSeconds' key.  To the best of
	my knowledge, the bug was not observable in the [clock]
	command itself.
	
2008-06-16  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (TclInfoFrame): Backport of fix made on the
	* tests/info.test: head branch :: Moved the code looking up the
	information for key 'proc' out of the TCL_LOCATION_BC branch to